# core-moos

./: .gitignore  .gitignore.orig  .travis.yml  .travis.yml~  CMakeLists.txt  CMakeLists.txt.orig  CTestConfig.cmake  MOOSConfig.cmake.in  Mainpage.dox  README.md  README.txt  appveyor.yml  build.cmake  index.html  params.json  release-notes.txt  structure.txt
Core/: CMakeLists.txt  GPLCore.txt
Core/MOOSDB/: CMakeLists.txt  HTTPConnection.cpp  HTTPConnection.h  MOOSDB.cpp  MOOSDB.h  MOOSDB.rc  MOOSDBHTTPServer.cpp  MOOSDBHTTPServer.h  MOOSDBMain.cpp  MOOSDBVar.cpp  MOOSDBVar.h  MOOSRegisterInfo.cpp  MOOSRegisterInfo.h  MsgFilter.cpp  MsgFilter.h  resource.h
Core/MOOSDB/testing/: CMakeLists.txt  CaptureTest.cpp  DBAppTest.cpp  DBAsyncTest.cpp  DBTestClient.cpp  IOTest.cpp  QueueTest.cpp  RegisterTest.cpp  Sanity.cpp  abuse_a_client.cpp  cmp2sock.cpp  erm.cpp  moos_test.cpp  umm.cpp
Core/MOOSGenLib/: CMakeLists.txt  ConsoleColours.h  MOOSAssert.h  MOOSFileReader.cpp  MOOSFileReader.h  MOOSGenLib.h  MOOSGenLibGlobalHelper.cpp  MOOSGenLibGlobalHelper.h  MOOSLinuxSerialPort.cpp  MOOSLock.cpp  MOOSNTSerialPort.h  MOOSScopedLock.h  MOOSSerialPort.cpp  MOOSSerialPort.h  MOOSThread.h  NTSerial.cpp  NTSerial.h  ProcessConfigReader.cpp  ProcessConfigReader.h
Core/MOOSLIB/: CMakeLists.txt  MOOSApp.cpp  MOOSApp.h  MOOSCommClient.cpp  MOOSCommClient.h  MOOSCommObject.cpp  MOOSCommObject.h  MOOSCommPkt.cpp  MOOSCommPkt.h  MOOSCommServer.cpp  MOOSCommServer.h  MOOSException.cpp  MOOSException.h  MOOSGlobalHelper.cpp  MOOSGlobalHelper.h  MOOSInstrument.cpp  MOOSInstrument.h  MOOSLib.h  MOOSMsg.cpp  MOOSMsg.h  MOOSSkewFilter.cpp  MOOSSkewFilter.h  MOOSVariable.cpp  MOOSVariable.h  ThreadedCommServer.cpp  ThreadedCommServer.h  XPCEndian.h  XPCException.h  XPCGetHostInfo.cpp  XPCGetHostInfo.h  XPCGetProtocol.cpp  XPCSocket.cpp  XPCSocket.h  XPCTcpSocket.cpp  XPCTcpSocket.h  XPCUdpSocket.cpp  XPCUdpSocket.h
Core/MOOSThirdparty/: CMakeLists.txt  svn-commit.tmp~
Core/MOOSThirdparty/GetPot/: CMakeLists.txt
Core/MOOSThirdparty/PocoBits/: CMakeLists.txt
Core/libMOOS/: CMakeLists.txt
Core/libMOOS/App/: MOOSApp.cpp  MOOSInstrument.cpp
Core/libMOOS/Comms/: ActiveMailQueue.cpp  ClientCommsStatus.cpp  EndToEndAudit.cpp  MOOSApp.cpp  MOOSAsyncCommClient.cpp  MOOSCommClient.cpp  MOOSCommObject.cpp  MOOSCommPkt.cpp  MOOSCommServer.cpp  MOOSCommServer.h  MOOSException.cpp  MOOSFooter.html  MOOSGlobalHelper.cpp  MOOSMsg.cpp  MOOSSkewFilter.cpp  MOOSSkewFilter.h  MOOSVariable.cpp  MessageQueueAccumulator.cpp  MulticastNode.cpp  ServerAudit.cpp  SuicidalSleeper.cpp  ThreadedCommServer.cpp  ThreadedCommServer.h  XPCGetHostInfo.cpp  XPCGetProtocol.cpp  XPCSocket.cpp  XPCSocket.h  XPCTcpSocket.cpp  XPCUdpSocket.cpp
Core/libMOOS/DB/: HTTPConnection.cpp  MOOSDB.cpp  MOOSDBHTTPServer.cpp  MOOSDBLogger.cpp  MOOSDBVar.cpp  MOOSRegisterInfo.cpp  MsgFilter.cpp
Core/libMOOS/Utils/: CMakeLists.txt  CommandLineParser.cpp  CommsTools.cpp  ConsoleColours.cpp  IPV4Address.cpp  KeyboardCapture.cpp  MOOSException.cpp  MOOSFileReader.cpp  MOOSLock.cpp  (+17 more)
Core/tools/: CMakeLists.txt
Essentials/MOOSUtilityLib/: CMakeLists.txt  InterpBuffer.h  MOOSGeodesy.cpp  MOOSGeodesy.h  MOOSMemoryMapped.h  MOOSTerrain.cpp  MOOSTerrain.h  MOOSThread.h  MOOSThreadedTimeJournal.h  MOOSTimeJournal.h  PitchZPID.cpp  PitchZPID.h  ScalarPID.cpp  ScalarPID.h  TMinPair.h  ThirdPartyRequest.cpp  ThirdPartyRequest.h
Essentials/pAntler/: Antler.cpp  Antler.h  AntlerMain.cpp  CMakeLists.txt  XPCException.h  XPCProcess.cpp  XPCProcess.h  XPCProcessAttrib.cpp  XPCProcessAttrib.h  resource.h
Essentials/pLogger/: CMakeLists.txt  MOOSLogger.cpp  MOOSLogger.h  Zipper.cpp  Zipper.h  pLoggerMain.cpp  resource.h
Essentials/pMOOSBridge/: CMakeLists.txt  MOOSBridge.cpp  MOOSBridge.h  MOOSBridgeMain.cpp  MOOSCommunity.cpp  MOOSCommunity.h  MOOSUDPLink.cpp  MOOSUDPLink.h  resource.h
Essentials/pScheduler/: CMakeLists.txt  MOOSScheduler.cpp  MOOSScheduler.h  pScheduler.rc  pSchedulerMain.cpp  resource.h
NavigationAndControl/MOOSNavLib/: CMOOSNavLibGlobalHelper.cpp  CMakeLists.txt  LBLMaths.cpp  LBLMaths.h  MOOSLinearLeastMedianFilter.cpp  MOOSLinearLeastMedianFilter.h  MOOSNavBBCMLEngine.cpp  MOOSNavBBCMLEngine.h  MOOSNavBase.cpp  MOOSNavBase.h  MOOSNavBeacon.cpp  MOOSNavBeacon.h  MOOSNavBroker.cpp  MOOSNavBroker.h  MOOSNavEKFEngine.cpp  MOOSNavEKFEngine.h  MOOSNavEngine.cpp  MOOSNavEngine.h  MOOSNavEntity.cpp  MOOSNavEntity.h  MOOSNavLSQEngine.cpp  MOOSNavLSQEngine.h  MOOSNavLib.h  MOOSNavLibDefs.h  MOOSNavLibGlobalHelper.h  MOOSNavLogger.cpp  MOOSNavLogger.h  MOOSNavObsStore.cpp  MOOSNavObsStore.h  MOOSNavSensor.cpp  MOOSNavSensor.h  MOOSNavTopDownCalEngine.cpp  MOOSNavTopDownCalEngine.h  MOOSNavVehicle.cpp  MOOSNavVehicle.h  MOOSObservation.cpp  MOOSObservation.h  MOOSSensorChannel.cpp  MOOSSensorChannel.h
NavigationAndControl/MOOSTaskLib/: AGVHeadingSpeedTask.cpp  AGVHeadingSpeedTask.h  CMakeLists.txt  ConstantDepthTask.cpp  ConstantDepthTask.h  ConstantHeadingTask.cpp  ConstantHeadingTask.h  DiveTask.cpp  DiveTask.h  EndMission.cpp  EndMission.h  GoToDepth.cpp  GoToDepth.h  GoToWayPoint.cpp  GoToWayPoint.h  HoldingPatternTask.cpp  HoldingPatternTask.h  LimitAltitude.cpp  LimitAltitude.h  LimitBox.cpp  LimitBox.h  LimitDepth.cpp  LimitDepth.h  MOOSBehaviour.cpp  MOOSBehaviour.h  MOOSTaskDefaults.h  MOOSTaskLib.h  MOOSTaskReader.cpp  MOOSTaskReader.h  OrbitTask.cpp  OrbitTask.h  OverallTimeOut.cpp  OverallTimeOut.h  PathAction.cpp  PathAction.h  PilotTask.cpp  PilotTask.h  SeabedTrack.cpp  SeabedTrack.h  SteerThenDriveXYPatternTask.cpp  (+17 more)
NavigationAndControl/iRemote/: CMakeLists.txt  MOOSRemote.cpp  MOOSRemote.h  iRemoteMain.cpp  resource.h
NavigationAndControl/pHelm/: CMakeLists.txt  HelmApp.cpp  HelmApp.h  HelmMain.cpp  resource.h
NavigationAndControl/pNav/: CMakeLists.txt  MOOSNavigator.cpp  MOOSNavigator.h  MOOSPriorityInput.cpp  MOOSPriorityInput.h  pNavMain.cpp  resource.h
Tools/: CMakeLists.txt
Tools/Console/: CMakeLists.txt
Tools/Graphical/: CMakeLists.txt
Tools/Matlab/: CMakeLists.txt
Tools/Simulation/: CMakeLists.txt
(+602 files in other folders)
